# windbgr-mcp

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  release-plz.toml  windbgr-mcp.example.toml
.github/workflows/: ci.yml  release-plz.yml
src/: app.rs  audit.rs  error.rs  lib.rs  main.rs  privilege.rs  security.rs
src/cdb/: cli.rs  constants.rs  control.rs  manager.rs  mod.rs  prompt.rs  ring.rs  session.rs
src/config/: defaults.rs  mod.rs  model.rs  resolver.rs
src/mcp/: mod.rs  registry.rs  server.rs  tools.rs
src/platform/: mod.rs
src/platform/windows/: handle.rs  mod.rs  modules.rs  privilege.rs  process.rs  skip.rs
src/process/: matcher.rs  mod.rs  model.rs  service.rs
tests/: audit_and_config.rs  cdb_integration.rs
windbg/workflows/: ci.yml
workflows/: release-plz.yml
