[package]
name = "windbgr-mcp"
version = "0.1.0"
edition = "2021"
description = "MCP server for Windows debugging"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["debugging", "mcp", "windows"]
categories = ["development-tools", "os::windows-apis"]
repository = "https://github.com/Mas0nShi/windbgr-mcp"
homepage = "https://github.com/Mas0nShi/windbgr-mcp"

[features]
default = []

[dependencies]
anyhow = "1"
thiserror = "1"
clap = { version = "4", features = ["derive", "env"] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec", "io"] }
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = { version = "1", features = ["chrono04"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
uuid = { version = "1", features = ["v4", "serde"] }
regex = "1"
once_cell = "1"
parking_lot = "0.12"
time = { version = "0.3", features = ["formatting", "macros"] }
axum = "0.7"
tower = "0.5"
rmcp = { version = "1.5", features = [
    "server",
    "macros",
    "schemars",
    "transport-io",
    "transport-streamable-http-server",
    "server-side-http",
    "tower",
] }
async-trait = "0.1"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_Console",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_ProcessStatus",
    "Win32_System_Threading",
    "Win32_System_LibraryLoader",
    "Win32_Security",
] }

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "windbgr-mcp"
path = "src/main.rs"

[profile.release]
lto = "thin"
strip = "symbols"
